# OpenSCAD-Models

./: .gitmodules  LICENSE  README.md  pyproject.toml
adafruit-1933-display-with-mini-driver-enclosure/: adafruit-1933-display-with-mini-driver-enclosure.3mf  adafruit-1933-display-with-mini-driver-enclosure.json  adafruit-1933-display-with-mini-driver-enclosure.scad  adafruit-1933-display-with-mini-driver-enclosure.stl
adafruit-macropad-rs2040-switch-plate/: inline-rs2040-switch-plate-v1.scad  rs2040-switch-plate-v1.scad  rs2040-switch-plate-v1.stl
adafruit-oled128x32-pi-400-cyberdeck-bonnet-enclosure/: enclosure.3mf  enclosure.scad  enclosure.stl
nvidia-jetson-nano-2g-enclosure/: jetson-nano-enclosure.3mf  jetson-nano-enclosure.scad  jetson-nano-enclosure.stl
pimoroni-hyperpixel4-square-notouch-enclosure/: enclosure.3mf  snap-fit-enclosure-bottom.stl  snap-fit-enclosure-top.stl  snap-fit-enclosure.json  snap-fit-enclosure.scad  snap-fit-enclosure.stl
tools/: README.rst  pyproject.toml  setup.py
tools/scadtools/: __main__.py  inline.py  main.py
