[tool.poetry]
name = "openscad-models"
version = "0.1.0"
description = "OpenSCAD models created by NascentMaker."
authors = ["NascentMaker <hello@nascentmaker.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cliff = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
